# DRAMsim3

./: CMakeLists.txt
src/: common.cc  simple_stats.cc  simple_stats.h
